<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <include
          layout="@layout/main_toolbar"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:orientation="vertical">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="@string/amount_title"
              android:textSize="15sp" />

          <EditText
              android:layout_width="250dp"
              android:layout_height="50dp"
              android:layout_gravity="center"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="15dp"
              android:inputType="number"
              android:id="@+id/amount_to_be"
              android:autofillHints="" />

          <TextView

              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="@string/from_title"
              android:textSize="15sp" />

          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="15dp"
              android:background="@drawable/spinner_border">

              <Spinner
                  android:id="@+id/from_currency"
                  android:layout_width="250dp"
                  android:layout_height="45dp" />
          </RelativeLayout>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="@string/to_title"
              android:textSize="15sp" />

          <RelativeLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="15dp"
              android:background="@drawable/spinner_border">

              <Spinner

                  android:id="@+id/to_currency"
                  android:layout_width="250dp"
                  android:layout_height="45dp" />
          </RelativeLayout>


      </LinearLayout>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_margin="20dp"
          android:text="@string/convert_btn"
          android:id="@+id/convert_btn"/>

      <TextView

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="15dp"
          android:layout_marginRight="20dp"
          android:text="@string/amount_converted_title"
          android:textSize="15sp" />

      <TextView

          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginBottom="15dp"
          android:background="#8146E8"
          android:textColor="#FFFFFF"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textAlignment="center"
          android:id="@+id/result_view"/>


  </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">
        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>